remove body width style becasue it leads to a scrollbar on windows fix #32

--- a/src/mw-layout/_mw_layout.scss
+++ b/src/mw-layout/_mw_layout.scss
@@ -7,9 +7,3 @@ $sub-nav-pill-divider: "1px solid #ccc";
 @import "styles/mw_row_layout";
 @import "styles/mw_sub_nav";
 @import "styles/mw_sub_nav_pill";
-
-body{
-  height: 100vh !important;
-  width: 100vw !important;
-  overflow: hidden !important;
-}
